test/compile_fail/retired_ops_fails.zig
const shift = @import("shift");

comptime {
    _ = shift.Ops;
}
